[package]
name = "bichannel"
version = "0.0.3"
authors = ["nkconnor <bichannel@nconnor.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Zero dependency std::mpsc based bidirectional channel"
repository = "https://github.com/nkconnor/bichannel"
documentation = "https://docs.rs/bichannel"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = { version = "0.5", optional = true }

[features]
crossbeam = ["crossbeam-channel"]
